fixed styling issues with cards cropping off text

--- a/public/styles.css
+++ b/public/styles.css
@@ -148,17 +148,16 @@ body {
 
 .related-outfits-container {
   background-color: var(--color-grey-light-1);
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  height: 50vh; }
 
 .related, .outfits {
-  height: 30vh; }
-  .related-text, .outfits-text {
-    font-size: 2rem; }
+  height: 50%; }
   .related-list, .outfits-list {
-    height: inherit; }
+    height: 100%; }
 
 .card {
-  height: 80%;
+  height: inherit;
   flex-shrink: 0;
   width: 20%;
   margin-right: 1.5rem;
@@ -178,20 +177,21 @@ body {
       background: transparent;
       border: none;
       font-size: 2rem;
-      color: #000; }
-  .card-info {
-    height: 50%; }
+      color: yellow; }
   .card-display img {
-    margin-top: 2.2rem;
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 5px 5px 0 0; }
   .card-info {
-    margin-top: 2rem;
+    height: 50%;
+    display: flex;
     text-align: center;
+    margin-left: .5rem;
+    flex-direction: column;
+    justify-content: space-evenly;
     font-size: 1.5rem;
-    line-height: 3rem; }
+    line-height: 2rem; }
 
 .addOutfit-btn {
   position: absolute;
@@ -206,9 +206,6 @@ body {
   cursor: pointer;
   overflow: hidden;
   outline: none; }
-
-.outfits {
-  margin-top: 4rem; }
 
 .q-and-a-widget {
   padding: 1rem;
